[gd_scene load_steps=38 format=3 uid="uid://4wliiovn5r88"]

[ext_resource type="Script" path="res://Scripts/TreeObjects.gd" id="1_rpla8"]
[ext_resource type="Texture2D" uid="uid://blc1jhcjbxlu6" path="res://Piskel/almost.png" id="2_utlmj"]
[ext_resource type="Texture2D" uid="uid://ddvbwkim6s7xg" path="res://Piskel/ProgressBar/finalflowershopefully.png" id="3_x84iy"]
[ext_resource type="Texture2D" uid="uid://qd6jkh0s62gm" path="res://Piskel/ProgressBar/blankfinal.png" id="4_xv0v4"]
[ext_resource type="Texture2D" uid="uid://djh027b4yyrg5" path="res://Piskel/image-1.png (2).png" id="5_aci1j"]
[ext_resource type="Texture2D" uid="uid://4qlnwjxpjkc1" path="res://Piskel/image-1.png (1).png" id="6_fmcfn"]
[ext_resource type="Texture2D" uid="uid://bgmcga1lywxlt" path="res://Piskel/New Piskel-1.png (6).png" id="7_7q86q"]
[ext_resource type="Texture2D" uid="uid://cr7hfjccnhr01" path="res://Piskel/image-1.png.png" id="8_a80db"]
[ext_resource type="Texture2D" uid="uid://ckwv3oxd4cbew" path="res://Piskel/image-1.png (1)-1.png (1).png" id="9_x6kqn"]
[ext_resource type="Texture2D" uid="uid://ctqg015rbprpm" path="res://Piskel/New Piskel-1.png (2).png" id="10_p7jjr"]
[ext_resource type="Texture2D" uid="uid://deaobkjbrueo3" path="res://Piskel/New Piskel-1.png (4).png" id="11_j6i0c"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ejuyg"]
atlas = ExtResource("2_utlmj")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cam1"]
atlas = ExtResource("2_utlmj")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4b2rm"]
atlas = ExtResource("2_utlmj")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hp75f"]
atlas = ExtResource("2_utlmj")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbvy2"]
atlas = ExtResource("2_utlmj")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhidb"]
atlas = ExtResource("2_utlmj")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_twn0r"]
atlas = ExtResource("2_utlmj")
region = Rect2(0, 256, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_ocxjo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejuyg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cam1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4b2rm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hp75f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbvy2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhidb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_twn0r")
}],
"loop": false,
"name": &"default",
"speed": 0.5
}]

[sub_resource type="Animation" id="Animation_aymux"]
resource_name = "Complete"
length = 1.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 0.9, 1, 1.1, 1.2, 1.3, 1.5, 1.7, 1.9),
"transitions": PackedFloat32Array(0.318641, 0.6, 0.6, 0.6, 0.6, 0.6, 0.34151, 0.406126, 0.392292, 1),
"update": 0,
"values": [Vector2(4.047, 4.047), Vector2(4.047, 3.6), Vector2(4.047, 4.7), Vector2(4.047, 4.2), Vector2(4.047, 4.6), Vector2(4.047, 4.3), Vector2(4.047, 4.5), Vector2(4.047, 3.9), Vector2(4.047, 4.1), Vector2(4.047, 4.047)]
}

[sub_resource type="Animation" id="Animation_5y7hp"]
resource_name = "Grow"
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.52, 0.64, 0.76, 0.84, 0.92, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(4.047, 4.047), Vector2(4.04688, 4.04688), Vector2(4.047, 4.3), Vector2(4.047, 3.9), Vector2(4.047, 4.2), Vector2(4.047, 4), Vector2(4.047, 4.1), Vector2(4.047, 4.047)]
}

[sub_resource type="Animation" id="Animation_fyfeo"]
resource_name = "Shrink"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.8, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(0.267943, 2.37841, 1, 1, 1),
"update": 0,
"values": [Vector2(4.047, 4.047), Vector2(4.047, 3.6), Vector2(4.047, 4.1), Vector2(4.047, 3.9), Vector2(4.047, 4.047)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.5, 0.7, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.603922, 0.419608, 0.2, 0.941176), Color(0.603922, 0.419608, 0.2, 0.941176), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.3, 0.45, 0.6, 0.75, 0.9, 1.2),
"transitions": PackedFloat32Array(1, 1, 3, 1.3, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0.470588), Color(1, 1, 1, 1), Color(1, 1, 1, 0.470588), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_fxkgi"]
resource_name = "Streak"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mlnio"]
_data = {
"Complete": SubResource("Animation_aymux"),
"Grow": SubResource("Animation_5y7hp"),
"Shrink": SubResource("Animation_fyfeo"),
"Streak": SubResource("Animation_fxkgi")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_ex6qd"]
atlas = ExtResource("3_x84iy")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_eh1y6"]
atlas = ExtResource("3_x84iy")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_jeabt"]
atlas = ExtResource("3_x84iy")
region = Rect2(48, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_w27di"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ex6qd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eh1y6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jeabt")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_t2ccl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_aci1j")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fymu2"]
texture = ExtResource("6_fmcfn")
texture_margin_left = 14.5685
texture_margin_top = 39.4422
texture_margin_right = 16.9511
texture_margin_bottom = 45.4003
region_rect = Rect2(13.5096, 20.6484, 100.136, 58.8369)

[sub_resource type="Theme" id="Theme_ovx5j"]
Panel/styles/panel = SubResource("StyleBoxTexture_fymu2")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_50oqg"]
texture = ExtResource("7_7q86q")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_f2smd"]
texture = ExtResource("7_7q86q")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tbc4a"]
texture = ExtResource("7_7q86q")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wu7gq"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5tqts"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_u8y3u"]

[node name="Plant" type="Node2D"]
script = ExtResource("1_rpla8")

[node name="Tree" type="AnimatedSprite2D" parent="."]
position = Vector2(195, 65)
scale = Vector2(4.047, 4.047)
sprite_frames = SubResource("SpriteFrames_ocxjo")
frame = 6
offset = Vector2(0, -64)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Tree"]
libraries = {
"": SubResource("AnimationLibrary_mlnio")
}

[node name="TreeTap" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = 264.0
offset_top = -14.0
offset_right = 301.0
offset_bottom = 70.0

[node name="Flower" type="AnimatedSprite2D" parent="TreeTap"]
position = Vector2(23, 40)
scale = Vector2(3.57813, 3.57813)
sprite_frames = SubResource("SpriteFrames_w27di")

[node name="Betterblankflower" type="Sprite2D" parent="TreeTap"]
position = Vector2(23.0001, 40)
scale = Vector2(3.578, 3.578)
texture = ExtResource("4_xv0v4")

[node name="Sign" type="AnimatedSprite2D" parent="."]
position = Vector2(49, -6)
scale = Vector2(1.24219, 1.24219)
sprite_frames = SubResource("SpriteFrames_t2ccl")

[node name="SignWrite" type="Panel" parent="Sign"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.5
offset_top = -107.0
offset_right = 8.5
offset_bottom = -34.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(72.5, 0)
theme = SubResource("Theme_ovx5j")

[node name="Information" type="MarginContainer" parent="Sign/SignWrite"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 5.0
offset_right = 55.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.68, 0.68)
theme_override_constants/margin_top = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Sign/SignWrite/Information"]
layout_mode = 2

[node name="DescriptionInformation" type="Label" parent="Sign/SignWrite/Information/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.384314, 0.278431, 0.137255, 1)
horizontal_alignment = 1
autowrap_mode = 3
uppercase = true

[node name="FrequencyInformation" type="Label" parent="Sign/SignWrite/Information/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 10
theme_override_colors/font_color = Color(0.384314, 0.278431, 0.137255, 1)
horizontal_alignment = 1
autowrap_mode = 1
uppercase = true

[node name="HoverCover" type="ColorRect" parent="Sign"]
offset_left = -68.0
offset_top = -38.0
offset_right = 67.0
offset_bottom = 25.0
color = Color(1, 1, 1, 0.247059)

[node name="EditSign" type="Button" parent="."]
offset_left = -39.0
offset_top = -57.0
offset_right = 133.0
offset_bottom = 29.0
theme_override_styles/normal = SubResource("StyleBoxTexture_50oqg")
theme_override_styles/hover = SubResource("StyleBoxTexture_f2smd")
theme_override_styles/pressed = SubResource("StyleBoxTexture_tbc4a")
theme_override_styles/focus = SubResource("StyleBoxTexture_wu7gq")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
offset = Vector2(420, 520)
transform = Transform2D(1, 0, 0, 1, 420, 520)

[node name="EditMenu" type="TextureRect" parent="CanvasLayer"]
offset_left = -73.0
offset_top = -413.0
offset_right = 414.0
offset_bottom = 74.0
texture = ExtResource("8_a80db")
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="GridContainer" parent="CanvasLayer/EditMenu"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -155.5
offset_top = -138.5
offset_right = 144.5
offset_bottom = -23.5
grow_horizontal = 2
grow_vertical = 2

[node name="TextEdit" type="TextEdit" parent="CanvasLayer/EditMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/background_color = Color(0.384314, 0.278431, 0.137255, 0.482353)
theme_override_font_sizes/font_size = 22
wrap_mode = 1

[node name="HSlider" type="HSlider" parent="CanvasLayer/EditMenu/VBoxContainer"]
layout_mode = 2
theme_override_icons/grabber = ExtResource("9_x6kqn")
theme_override_icons/tick = ExtResource("7_7q86q")
theme_override_styles/grabber_area = SubResource("StyleBoxTexture_5tqts")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxTexture_u8y3u")
max_value = 4.0

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/EditMenu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.384314, 0.278431, 0.137255, 1)
theme_override_colors/font_selected_color = Color(0.384314, 0.278431, 0.137255, 1)
theme_override_colors/font_uneditable_color = Color(0.384314, 0.278431, 0.137255, 1)
alignment = 1
editable = false

[node name="Destroy" type="Button" parent="CanvasLayer/EditMenu"]
layout_mode = 2
offset_left = 88.0
offset_top = 230.0
offset_right = 176.0
offset_bottom = 265.0
size_flags_horizontal = 0
text = "CHOP"

[node name="ExitEditMenu" type="TextureButton" parent="CanvasLayer/EditMenu"]
layout_mode = 0
offset_left = 355.0
offset_top = 232.0
offset_right = 387.0
offset_bottom = 264.0
texture_normal = ExtResource("10_p7jjr")
texture_hover = ExtResource("11_j6i0c")

[node name="Save" type="Button" parent="CanvasLayer/EditMenu"]
layout_mode = 0
offset_left = 202.0
offset_top = 230.0
offset_right = 290.0
offset_bottom = 265.0
text = "SAVE"

[connection signal="mouse_entered" from="TreeTap" to="." method="_on_tree_tap_mouse_entered"]
[connection signal="mouse_exited" from="TreeTap" to="." method="_on_tree_tap_mouse_exited"]
[connection signal="pressed" from="TreeTap" to="." method="_on_tree_tap_pressed"]
[connection signal="mouse_entered" from="EditSign" to="." method="_on_edit_sign_mouse_entered"]
[connection signal="mouse_exited" from="EditSign" to="." method="_on_edit_sign_mouse_exited"]
[connection signal="pressed" from="EditSign" to="." method="_on_edit_sign_pressed"]
[connection signal="text_changed" from="CanvasLayer/EditMenu/VBoxContainer/TextEdit" to="." method="_on_text_edit_text_changed"]
[connection signal="value_changed" from="CanvasLayer/EditMenu/VBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="CanvasLayer/EditMenu/Destroy" to="." method="_on_destroy_pressed"]
[connection signal="pressed" from="CanvasLayer/EditMenu/ExitEditMenu" to="." method="_on_exit_edit_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/EditMenu/Save" to="." method="_on_save_pressed"]
